--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,80 @@
-pip install tensorflow pandas numpy matplotlib seaborn librosa scikit-learn pillow opencv-python scikit-image tqdm
+# Deep Learning Framework
+tensorflow==2.15.0
+keras==2.15.0
+
+# Audio Processing
+librosa==0.10.1
+soundfile==0.12.1
+pydub==0.25.1
+
+# Data Manipulation and Analysis
+numpy==1.24.3
+pandas==2.1.4
+scipy==1.11.4
+
+# Machine Learning
+scikit-learn==1.3.2
+
+# Visualization
+matplotlib==3.8.2
+seaborn==0.13.0
+plotly==5.17.0
+
+# Image Processing
+Pillow==10.1.0
+opencv-python==4.8.1.78
+
+# Web Interface (Optional)
+streamlit==1.28.2
+gradio==4.7.1
+
+# Utilities
+tqdm==4.66.1
+joblib==1.3.2
+h5py==3.10.0
+
+# Audio File Support
+pyaudio
+audioread
+
+# Jupyter Notebook Support (Optional)
+jupyter==1.0.0
+ipykernel==6.27.1
+
+# Development and Testing
+pytest==7.4.3
+black==23.11.0
+flake8==6.1.0
+
+# Configuration and Environment
+python-dotenv==1.0.0
+configparser==6.0.0
+
+# Progress Bars and Logging
+rich==13.7.0
+loguru==0.7.2
+
+# Data Validation
+pydantic==2.5.0
+
+# Memory Management
+psutil==5.9.6
+
+# Optional: GPU Support (uncomment if you have CUDA)
+# tensorflow-gpu==2.15.0
+
+# Optional: Advanced Audio Features
+# essentia==2.1_beta6
+# madmom==0.16.1
+
+# Optional: Model Interpretability
+# lime==0.2.0.1
+# shap==0.44.0
+
+# Optional: Hyperparameter Tuning
+# optuna==3.4.0
+# ray[tune]==2.8.0
+
+# Optional: Model Serving
+# fastapi==0.104.1
+# uvicorn==0.24.0 
